--- a/Readingtohabit/auth/login.html
+++ b/Readingtohabit/auth/login.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://readingtohabit.jp/css/font-awesome.min.css">
 <script type="text/javascript" src = "https://readingtohabit.jp/js/jquery_ui_1_12_1/jquery.js"></script>
 <script type="text/javascript" src = "https://readingtohabit.jp/js/errCheck.js"></script>
-<title>Reading to habit || ログイン</title>
+<title>Reading to habit | ログイン</title>
 </head>
 
 <body>
