Reading to habitソースコード

--- a/Readingtohabit/index/index.html
+++ b/Readingtohabit/index/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <title>Reading to habit | 読書で学んだことの習慣化</title>
 <meta name = "title" content = "Reading to habit | 読書で学んだことの習慣化">
-<meta name = "description" content = "「できるビジネスパーソンは本を読んでいる!!」
+<meta name = "keywords" content = "読書,習慣">
+<meta name = "description" content = "本を「できるビジネスパーソンは本を読んでいる!!」
 Reading to habitは読書で学んだことの習慣化を支援するサービスです。">
 <meta name = "robots" content = "index, follow">
 <meta name = "viewport" content = "width = device-width">
